# ml-classifier-gui-app

./: .gitignore  README.md  pyproject.toml  test.py
finishedProject/: classifier.py
finishedProject/notebooks/: NeuralNetworkBuilder.ipynb
finishedProject/src/: classifier.py
src/classifier/: classes.py  classifier.py  help_functions.py
src/model/: baseline.keras
src/notebooks/: NeuralNetworkBuilder.ipynb
starterFiles/: NeuralNetworkBuilder.ipynb  NeuralNetworkQuickBuilder.ipynb
