[project]
name = "ml-classifier-gui-app"
version = "1.0.0"
description = "A simple machine learning image classifier GUI app for beginners"
readme = "README.md"

requires-python = ">=3.12,<3.13"

dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "keras>=3.13.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "pre-commit>=4.5.1",
    "tensorflow>=2.21.0",
]

[tool.flake8]
max-line-length = 125
