[project]
name = "ml-classifier-gui-app"
version = "1.0.0"
description = "A simple machine learning image classifier GUI app for beginners"
readme = "README.md"

requires-python = ">=3.12,<3.13"

dependencies = [
    "flask>=3.0.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "keras>=3.13.2",
    "matplotlib>=3.10.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pillow>=12.1.1",
    "pip>=26.0.1",
    "pre-commit>=4.5.1",
    "pyarrow>=14.0.0",
    "sqlalchemy>=2.0.16",
    "taipy==3.1.1",
    "tensorflow==2.18.0",
]

[tool.flake8]
max-line-length = 125
